--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,10 +3,10 @@
   "configurations": [
     {
       "name": "Build + Deploy All Mods",
+      "preLaunchTask": "Build + Deploy All Mods",
       "type": "node-terminal",
       "request": "launch",
-      "command": "echo Build + Deploy All Mods completed; exit",
-      "preLaunchTask": "Build + Deploy All Mods"
+      "command": "open steam://rungameid/457140; exit"
     }
   ]
 }
