--- a/ContainerTooltips/ContainerTooltips.csproj
+++ b/ContainerTooltips/ContainerTooltips.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <AssemblyName>ContainerTooltips</AssemblyName>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <RestorePackagesPath>..\packages</RestorePackagesPath>
     <!-- Mod ID used for deployment path; must match mod.yaml staticID -->
     <ModId>ContainerTooltips</ModId>
   </PropertyGroup>
@@ -30,6 +31,12 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PLib" Version="4.17.1" />
+    <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.26" PrivateAssets="All" />
+  </ItemGroup>
+
   <!-- Cross-platform deploy to ONI Local mods folder via MSBuild -->
   <PropertyGroup>
     <!-- Allow override: dotnet build /p:OniLocalModsDir=... or env var -->
@@ -37,7 +44,30 @@
     <OniLocalModsDir Condition="'$(OniLocalModsDir)' == '' and '$(OS)' != 'Windows_NT'">$(HOME)/Library/Application Support/unity.Klei.Oxygen Not Included/mods/Local/$(ModId)</OniLocalModsDir>
   </PropertyGroup>
 
-  <Target Name="DeployOniMod" AfterTargets="Build" Condition="'$(DeployOniMod)' != ''">
+  <Target Name="MergeDependencies" AfterTargets="Build">
+    <PropertyGroup>
+      <MergedAssemblyPath>$(TargetDir)\Merged\$(TargetName).dll</MergedAssemblyPath>
+      <MergedPdbPath>$([System.IO.Path]::ChangeExtension('$(MergedAssemblyPath)', '.pdb'))</MergedPdbPath>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <MergeAssemblies Include="$(TargetPath)" />
+      <MergeAssemblies Include="$(TargetDir)PLib.dll" />
+    </ItemGroup>
+
+    <ILRepack
+      Parallel="true"
+      DebugInfo="true"
+      InputAssemblies="@(MergeAssemblies)"
+      LibraryPath="$(TargetDir)"
+      TargetKind="SameAsPrimaryAssembly"
+      OutputFile="$(MergedAssemblyPath)" />
+
+    <Move SourceFiles="$(MergedAssemblyPath)" DestinationFiles="$(TargetPath)" OverwriteReadOnlyFiles="true" />
+    <Move SourceFiles="$(MergedPdbPath)" DestinationFiles="$(TargetDir)$(TargetName).pdb" Condition="Exists('$(MergedPdbPath)')" OverwriteReadOnlyFiles="true" />
+  </Target>
+
+  <Target Name="DeployOniMod" AfterTargets="Build" DependsOnTargets="MergeDependencies" Condition="'$(DeployOniMod)' != ''">
     <Message Text="Deploying mod to: $(OniLocalModsDir)" Importance="High" />
     <MakeDir Directories="$(OniLocalModsDir)" />
     <ItemGroup>
